# claude-code-artifacts-public

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: environment_config.py  validate_configs.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  docs-issue.yml  feature-request.yml  question.yml
.github/workflows/: validate-configs.yml
agents/: README.md
environments/: README.md
environments/templates/: basic-template.yaml
extras/serena/: lsp-only.yml  system_prompt.yml
hooks/: README.md
hooks/configs/universal/: serena_tool_enforcement_config.yaml
mcp/: README.md
output-styles/: README.md
rules/: README.md
scripts/: __init__.py  validate_environment_config.py  validate_xml_tags.py
scripts/models/: environment_config.py
skills/: README.md
slash-commands/: README.md
system-prompts/: README.md
